force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <label>Benefits</label>
    <nameField>
        <displayFormat>BT-{000000}</displayFormat>
        <label>BENEFIT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>