force-app/main/default/objects/Benefit__c/fields/AvailableUsageTime__c.field-meta.xml
<CustomField>
    <fullName>AvailableUsageTime__c</fullName>
    <label>Available Usage Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>