force-app/main/default/objects/Benefit__c/fields/BenefitDetail__c.field-meta.xml
<CustomField>
    <fullName>BenefitDetail__c</fullName>
    <label>Benefit Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>