force-app/main/default/objects/Benefit__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>