force-app/main/default/objects/Benefit__c/fields/PurchasingValue__c.field-meta.xml
<CustomField>
    <fullName>PurchasingValue__c</fullName>
    <label>Purchasing Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>