force-app/main/default/objects/Benefit__c/fields/ScopeOfProduct__c.field-meta.xml
<CustomField>
    <fullName>ScopeOfProduct__c</fullName>
    <label>Scope Of Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>