force-app/main/default/objects/Benefit__c/recordTypes/Coupon.recordType-meta.xml
<RecordType>
    <fullName>Coupon</fullName>
    <active>true</active>
    <description>To manage a discount coupon</description>
    <label>Coupon</label>
</RecordType>