force-app/main/default/objects/Benefit__c/recordTypes/GiftCard.recordType-meta.xml
<RecordType>
    <fullName>GiftCard</fullName>
    <active>true</active>
    <description>To manage a Gift Card or Ticket exchange for items up to the stated value</description>
    <label>Gift Card</label>
</RecordType>