force-app/main/default/objects/Benefit__c/recordTypes/Voucher.recordType-meta.xml
<RecordType>
    <fullName>Voucher</fullName>
    <active>true</active>
    <description>To manager a voucher to exchange for an item or service</description>
    <label>Voucher</label>
</RecordType>